# flask-session

./: .coveragerc  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .releaserc  CHANGELOG.md  CHANGES  CHANGES.rst  CONTRIBUTING.rst  CONTRIBUTORS.md  LICENSE  LICENSE.rst  Makefile  README.md  README.rst  buildout.cfg  docker-compose-redis-sentinel.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  renovate.json  requirements.txt  run_tests.sh  sessions.py  setup.cfg  setup.py  test_requirements.txt  test_session.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  publish.yaml  python-package.yml  release.yml  ruff.yaml  test.yaml  test.yml
docs/: api.rst  changes.rst  conf.py  config.rst  config_backend.rst  config_cleanup.rst  config_example.rst  config_exceptions.rst  config_flask.rst  config_flask_session.rst  config_guide.rst  config_nonpermanent.rst  config_reference.rst  config_security.rst  config_serialization.rst  config_storage.rst  contributing.rst  index.rst  installation.rst  interfaces.rst  introduction.rst  make.bat  quickstart.rst  security.rst  usage.rst
docs/_static/: styles.css
docs/_static/icon/: icon-master.psd
docs/_static/logo/: logo-master-long.psd  logo-master.psd
examples/: hello.py  kitchen-sink.py  test_session_mongo.py
flask_server_session/: __init__.py  sessions.py
flask_session/: __init__.py  sessions.py
requirements/: dev.in  dev.txt  docs.in  docs.txt  pytest.txt
src/flask_session/: __init__.py  _utils.py  base.py  defaults.py  sessions.py
src/flask_session/aerospike/: __init__.py  aerospike.py
src/flask_session/cachelib/: __init__.py  cachelib.py
src/flask_session/dynamodb/: __init__.py  dynamodb.py
src/flask_session/filesystem/: __init__.py  filesystem.py
src/flask_session/memcached/: __init__.py  memcached.py
src/flask_session/mongodb/: __init__.py  mongodb.py
src/flask_session/postgres/: __init__.py  _queries.py  postgres.py
src/flask_session/postgresql/: __init__.py  _queries.py  postgresql.py
src/flask_session/redis/: __init__.py  redis.py  redis_sentinel.py
src/flask_session/sqlalchemy/: __init__.py  sqlalchemy.py
src/flask_session/sqlalchemy_native/: __init__.py  sqlalchemy_native.py
tests/: .coveragerc  abs_test.py  conftest.py  pytest.ini  test_aerospike.py  test_basic.py  test_cachelib.py  test_dynamodb.py  test_filesystem.py  test_memcached.py  test_mongodb.py  test_postgresql.py  test_redis.py  test_sqlalchemy.py  test_sqlalchemy_native.py  utils.py
