[project]
name = "Flask-Session"
description = "Server-side session support for Flask"
readme = "README.rst"
license = {text = "BSD-3-Clause"}
maintainers = [{name = "Pallets Community Ecosystem", email = "contact@palletsprojects.com"}]
authors = [{name = "Shipeng Feng", email = "fsp261@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.7"
dependencies = [
    "flask>=2.2",
    "msgspec>=0.18.6",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://flask-session.readthedocs.io"
Changes = "https://flask-session.readthedocs.io/changes.html"
"Source Code" = "https://github.com/pallets-eco/flask-session/"
"Issue Tracker" = "https://github.com/pallets-eco/flask-session/issues/"
Chat = "https://discord.gg/pallets"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "flask_session"

[tool.flit.sdist]
include = [
    "docs/",
    "requirements/",
    "CHANGES.rst",
    "LICENSE.rst",
    "test_session.py",
]
exclude = ["docs/_build/"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]