[project]
name = "Flask-Session"
description = "Server-side session support for Flask"
readme = "README.rst"
license = {text = "BSD-3-Clause"}
maintainers = [{name = "Pallets Community Ecosystem", email = "contact@palletsprojects.com"}]
authors = [{name = "Shipeng Feng", email = "fsp261@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.8"
dependencies = [
    "flask>=2.2",
    "msgspec>=0.18.6",
    "cachelib",
]
dynamic = ["version"]

[project.optional-dependencies]
cachelib = ["cachelib>=0.10.2"]
memcached = ["pymemcache"]
mongodb = ["pymongo>=4.6.2"]
redis = ["redis>=5.0.3"]
sqlalchemy = ["flask-sqlalchemy>=3.0.5"]
all = ["Flask-Session[cachelib, memcached, mongodb, redis, sqlalchemy]"]

[project.urls]
Documentation = "https://flask-session.readthedocs.io"
Changes = "https://flask-session.readthedocs.io/changes.html"
"Source Code" = "https://github.com/pallets-eco/flask-session/"
"Issue Tracker" = "https://github.com/pallets-eco/flask-session/issues/"
Chat = "https://discord.gg/pallets"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "flask_session"

[tool.flit.sdist]
include = [
    "docs/",
    "requirements/",
    "CHANGES.rst",
    "LICENSE.rst",
    "test_session.py",
]
exclude = ["docs/_build/"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.3.3",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "redis>=5.0.3",
    "python-memcached>=1.62",
    "flask-sqlalchemy>=3.0.5",
    "pymongo>=4.6.2",
    "cachelib>=0.10.2",
    "msgspec>=0.18.6",
    "sphinx>=7.1.2",
    "furo>=2024.1.29",
    "sphinx-favicon>=1.0.1",
    "boto3>=1.34.68",
    "mypy_boto3_dynamodb>=1.34.67",
    "pymemcache>=4.0.0",
]
