[metadata]
name = Flask-Session
version = 0.4.0
url = https://github.com/fengsp/flask-session
license = BSD
author = Shipeng Feng
author_email = fsp261@gmail.com
description = Adds server-side session support to your Flask application
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = any
classifiers =
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = flask_session
zip_safe = False
include_package_data = True
install_requires =
    Flask>=0.8
    cachelib

[options.extras_require]
memcached = pylibmc
mongo = pymongo<4.0
redis = redis
sql = Flask-SQLAlchemy
test =
    Flask-SQLAlchemy
    pylibmc
    pymongo
    redis
doc = Sphinx

[bdist_wheel]
universal = 1
